update equipment slider

--- a/index.html
+++ b/index.html
@@ -155,15 +155,36 @@
 				<h3 class="headline_lg pad-top_20">Drive the Best.</h3>
 				<p class="pad-top_20">Late-model Kenworth and Freightliners</p>
 			</div>
-			<div class="equipment-slider">
+
+			<div class="equipment-slider equipment-slider_left">
 				<div class="equipment-slider_slide">
-					<img src="img/equipment.jpg">
+					<img src="img/equipment-slider/equipment-3.jpg">
+				</div>
+				<div class="equipment-slider_slide">
+					<img src="img/equipment-slider/equipment-1.jpg">
+				</div>
+				<div class="equipment-slider_slide">
+					<img src="img/equipment-slider/equipment-6.jpg">
 				</div>
 			</div>
+
+			<div class="equipment-slider equipment-slider_right">
+				<div class="equipment-slider_slide">
+					<img src="img/equipment-slider/equipment-4.jpg">
+				</div>
+				<div class="equipment-slider_slide">
+					<img src="img/equipment-slider/equipment-2.jpg">
+				</div>
+				<div class="equipment-slider_slide">
+					<img src="img/equipment-slider/equipment-5.jpg">
+				</div>
+			</div>
+
 			<div class="equipment-slider_btns flex-v">
 				<div class="equipment-slider_prev-btn flex-all"><i class="fas fa-angle-left"></i></div>
 			  <div class="equipment-slider_next-btn flex-all"><i class="fas fa-angle-right"></i></div>
 			</div>
+
 		</section>
 		<!-- ————————————————————
 		DRIVER STORIES
