add best fleets graphic

--- a/index.html
+++ b/index.html
@@ -146,6 +146,7 @@
 				<a href="" class="primary-btn margin-top_60">Explore Driving Careers<i class="fas fa-angle-right"></i></a>
 			</div>
 		</section>
+
 		<!-- ————————————————————
 		EQUIPMENT
 		————————————————————— -->
@@ -241,10 +242,12 @@
 	      </div>
       </div>
 		</section>
+
+
     <!-- ————————————————————
 		APPLY CTA
 		————————————————————— -->
-		<section class="apply-cta align-center pad_120">
+		<section class="apply-cta align-center">
 			<div class="container_md text-align_center">
 				<div class="column">
 					<h3 class="headline_md">We're Ready When You Are.</h3>
@@ -255,6 +258,10 @@
 					<a href="" class="apply-btn btn">Apply Now</a>
 				</div>
 			</div>
+		</section>
+
+		<section class="best-fleets text-align_center">
+			<img src="img/best-fleets-trucks.png" width="900">
 		</section>
     <!-- ————————————————————
 		FOOTER
