neutralize white space

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/fontawesome-all.min.css">
   <link rel="stylesheet" href="css/slick.css">
-  <link rel="stylesheet" href="css/main.css">
+  <link rel="stylesheet" href="css/main.css?v=1.0">
 
 </head>
 
@@ -251,7 +251,7 @@
 			<div class="container_md text-align_center">
 				<div class="column">
 					<h3 class="headline_md">We're Ready When You Are.</h3>
-					<p class="pad-top_20 color_gray">Interested in driving with ACT? Call us today to speak with a recruiter or if you're ready, go ahead and fill out an application.</p>
+					<p class="pad-top_20">Interested in driving with ACT? Call us today to speak with a recruiter or if you're ready, go ahead and fill out an application.</p>
 				</div>
 				<div class="button-group pad-top_60">
 					<a href="" class="primary-btn btn"><strong>888.428.5228</strong></a>
